消除jdk9的编译警告